add new english and arabic fonts.

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <h3 style="color: #f26822;" class="arabic">الربط</h3>
                 <p class="english">Our team will set everthing up <br>in two -
                   three days.</p>
-                <p class="arabic"> سيقوم فريقنا بإعداد كل شيء <be> في غضون يومين
+                <p class="arabic"> سيقوم فريقنا بإعداد كل شيء <br> في غضون يومين
                     إلى ثلاثة أيام. </p>
                 </div>
               </div>
