add text at About Us Section.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
                   مقدمي الخدمة
                   للتسليم الخاص بك؟
                 </h2>
+                <br>
+                <br>
+                <h2 style="font-weight: bold;color: #411d4b ;">
+                  <span class="english">
+                    We have better solution...
+                  </span>
+                  <span class="arabic">
+                    لدينا افضل الحلول...
+                  </span>
+                </h2>
                 <a href="#collection" class="btn-learn-more"> <span class="english">Discover
                     more</span>
                   <span class="arabic">اكتشف المزيد</span></a>
