--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               style="width:100%; height:100%;">
           </div>
           <div class="col-md-5 d-flex align-items-center bg-orange text-white"
-            style="background: #f26822">
+            style="background: #f26822;">
             <div class="container">
               <div class="content">
                 <h2 class="english" style="font-size: 3rem;">You are being
@@ -157,6 +157,11 @@
 
               </div>
             </div>
+          </div>
+          <div class="col-md-1 p-0">
+            <img src="assets/img/resources/problemslider-image2.png"
+              alt="Background Image"
+              style="width:100%; height:100%;">
           </div>
         </div>
       </section><!-- End About Us Section -->
