update the consultant Section

--- a/index.html
+++ b/index.html
@@ -278,14 +278,19 @@
         </div>
 
       </section>
-      <!-- End Why Us Section -->
+      <!-- consultant Section -->
 
       <section style="background-color: #0e76bc;padding-top: 0px;padding-bottom:
         0px;">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6 order-md-1 text-right" style="padding-top:
-              30px;">
+          <div class="row" style="
+            height: 143px;
+            ">
+            <div class="col-md-8 order-md-1 text-right" style="
+              padding-top:
+              30px;
+              padding-left: 100px;
+              ">
               <h2 style="color: #fff;" class="english">Talk to a JetParcel
                 consultant</h2>
               <h2 style="color: #fff;" class="arabic">تحدث إلى مستشار JetParcel</h2>
@@ -297,10 +302,10 @@
                 <span class="arabic">الان!</span>
               </button>
             </div>
-            <div class="col-md-6 order-md-2 text-left">
+            <div class="col-md-4 order-md-2 text-left">
               <img src="assets/img/resources/consultant.png" alt="Section Image"
-                class="img-fluid"
-                style="height: 150px;padding-left: 200px;">
+                class="img-fluid" style="height: 211px; position: absolute;
+                left: 70%; transform: translateY(-32%);">
 
             </div>
           </div>
