--- a/index.html
+++ b/index.html
@@ -341,53 +341,58 @@
 
             <div class="row justify-content-center">
               <div class="col-md-2 mb-4 " style="
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-top: 20px;
-">
-                <img src="assets/img/resources/partners-smsa.jpg" alt="Logo 1" style="height: 40px;">
+                padding-left: 15px;
+                padding-right: 15px;
+                margin-right: 15px;
+                margin-left: 15px;
+                margin-top: 20px;
+                ">
+                <img src="assets/img/resources/partners-smsa.jpg" alt="Logo 1"
+                  style="height: 40px;">
               </div>
               <div class="col-md-2 mb-4 " style="
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-top: 20px;
-">
-                <img src="assets/img/resources/partners-dhl.jpg" alt="Logo 2" style="height: 40px;">
+                padding-left: 15px;
+                padding-right: 15px;
+                margin-right: 15px;
+                margin-left: 15px;
+                margin-top: 20px;
+                ">
+                <img src="assets/img/resources/partners-dhl.jpg" alt="Logo 2"
+                  style="height: 40px;">
               </div>
               <div class="col-md-2 mb-4 " style="
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-top: 20px;
-">
-                <img src="assets/img/resources/partners-jnt.jpg" alt="Logo 3" style="height: 40px;">
+                padding-left: 15px;
+                padding-right: 15px;
+                margin-right: 15px;
+                margin-left: 15px;
+                margin-top: 20px;
+                ">
+                <img src="assets/img/resources/partners-jnt.jpg" alt="Logo 3"
+                  style="height: 40px;">
               </div>
               <div class="col-md-2 mb-4 " style="
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-top: 20px;
-">
-                <img src="assets/img/resources/partners-aramex.jpg" alt="Logo 4" style="height: 40px;">
+                padding-left: 15px;
+                padding-right: 15px;
+                margin-right: 15px;
+                margin-left: 15px;
+                margin-top: 20px;
+                ">
+                <img src="assets/img/resources/partners-aramex.jpg" alt="Logo 4"
+                  style="height: 40px;">
               </div>
               <div class="col-md-2 mb-4 " style="
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-top: 10px;
-">
-                <img src="assets/img/resources/partners-ups.jpg" alt="Logo 5" style="height: 60px;">
+                padding-left: 15px;
+                padding-right: 15px;
+                margin-right: 15px;
+                margin-left: 15px;
+                margin-top: 10px;
+                ">
+                <img src="assets/img/resources/partners-ups.jpg" alt="Logo 5"
+                  style="height: 60px;">
               </div>
             </div>
-            
-            
+
+
 
           </div>
 
