--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
             <div class="row justify-content-center">
               <div class="col-md-2 mb-4 " style="
                 padding-left: 15px;
-                padding-right: 15px;
-                margin-right: 15px;
+                padding-right: 0%;
+                margin-right: -3%;
                 margin-left: 15px;
                 margin-top: 20px;
                 ">
@@ -382,7 +382,7 @@
               </div>
               <div class="col-md-2 mb-4 " style="
                 padding-left: 15px;
-                padding-right: 15px;
+                padding-right: 11%;
                 margin-right: 15px;
                 margin-left: 15px;
                 margin-top: 10px;
@@ -402,18 +402,60 @@
               <h2 class="text-orange english">Sales Channels</h2>
               <h2 class="text-orange arabic">قنوات البيع</h2>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-10">
+
               <div class="row justify-content-center">
-                <div class="col-md-4">
+                <div class="col-md-2 mb-4 " style="
+                  padding-left: 15px;
+                  padding-right: 0%;
+                  margin-right: 15px;
+                  margin-left: 15px;
+                  margin-top: 20px;
+                  ">
                   <img src="assets/img/resources/partners-sallah.jpg" alt="Logo
-                    6">
+                    1"
+                    style="height: 60px;">
                 </div>
-                <div class="col-md-4">
-                  <img src="assets/img/resources/partners-zid.jpg" alt="Logo 7">
+                <div class="col-md-2 mb-4 " style="
+                  padding-left: 15px;
+                  padding-right: 0%;
+                  margin-right: 1%;
+                  margin-left: 15px;
+                  margin-top: 20px;
+                  ">
+                  <img src="assets/img/resources/partners-zid.jpg" alt="Logo 2"
+                    style="height: 60px;">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2 mb-4 " style="
+                  padding-left: 15px;
+                  padding-right: 9%;
+                  margin-right: 9%;
+                  margin-left: 15px;
+                  margin-top: 10px;
+                  ">
                   <img src="assets/img/resources/partners-shopify.jpg" alt="Logo
-                    8">
+                    3"
+                    style="height: 70px;">
+                </div>
+                <div class="col-md-2 mb-4 " style="
+                  padding-left: 15px;
+                  padding-right: 9%;
+                  margin-right: -48px;
+                  margin-left: 15px;
+                  margin-top: 10px;
+                  ">
+                  <img src="assets/img/resources/snapchat.png" alt="Logo 4"
+                    style="height: 75px;">
+                </div>
+                <div class="col-md-2 mb-4 " style="
+                  padding-left: 15px;
+                  padding-right: 15px;
+                  margin-right: 15px;
+                  margin-left: 15px;
+                  margin-top: 10px;
+                  ">
+                  <img src="assets/img/resources/instagram.png" alt="Logo 5"
+                    style="height: 75px;">
                 </div>
               </div>
             </div>
@@ -427,68 +469,62 @@
       <!-- ======= Services Section ======= -->
       <section id="services" class="services section-bg"
         style="background-color: #0e76bc;">
-        <div class="container" data-aos="fade-up">
-          <div class="row">
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch"
-              data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue1-protection.png" alt="Logo
-                  6">
-                <p class="english">Upto 250 SAR protection as
-                  standard*
-                  *excluding EVRi deliveries</p>
-                <p class="arabic">حماية تصل إلى 250 ريال سعودي
-                  معيار*
-                  * باستثناء عمليات تسليم EVRi </p>
-              </div>
+        <div class="container " data-aos="fade-up">
+          <div class="row justify-content-center">
+
+            <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+              <img class="image-box-3d"
+                src="assets/img/resources/blue1-protection.png" alt="Logo
+                6">
+              <p class="english">Upto 250 SAR protection as
+                standard*
+                *excluding EVRi deliveries</p>
+              <p class="arabic">حماية تصل إلى 250 ريال سعودي
+                معيار*
+                * باستثناء عمليات تسليم EVRi </p>
+
             </div>
 
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4
-              mt-md-0" data-aos="zoom-in"
-              data-aos-delay="200">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue1-collection.png" alt="Logo
-                  6">
-                <p class="english">Collection or drop-off at a local shop
-                  anytime</p>
-                <p class="arabic">
+            <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+              <img class="image-box-3d"
+                src="assets/img/resources/blue1-collection.png" alt="Logo
+                6">
+              <p class="english">Collection or drop-off at a local shop
+                anytime</p>
+              <p class="arabic">
 
-                  الاستلام أو الإنزال في المتاجر المحلية في أي وقت
+                الاستلام أو الإنزال في المتاجر المحلية في أي وقت
 
-                </p>
-              </div>
+              </p>
+
             </div>
 
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4
-              mt-xl-0" data-aos="zoom-in"
-              data-aos-delay="300">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue1-track.png" alt="Logo 6">
-                <p class="english">Tack your parcel from
-                  door-to-door</p>
-                <p class="arabic">
+            <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+              <img class="image-box-3d"
+                src="assets/img/resources/blue1-track.png" alt="Logo 6">
+              <p class="english">Tack your parcel from
+                door-to-door</p>
+              <p class="arabic">
 
-                  تتبع الطرد الخاص بك من
-                  من الباب إلى الباب
+                تتبع الطرد الخاص بك من
+                من الباب إلى الباب
 
-                </p>
-              </div>
+              </p>
+
             </div>
 
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4
-              mt-xl-0" data-aos="zoom-in"
-              data-aos-delay="400">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue1-bulky.png" alt="Logo 6">
-                <p class="english">Send bulky or heavy items
-                  weighing up to 1,000 kg</p>
-                <p class="arabic">
+            <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+              <img class="image-box-3d"
+                src="assets/img/resources/blue1-bulky.png" alt="Logo 6">
+              <p class="english">Send bulky or heavy items
+                weighing up to 1,000 kg</p>
+              <p class="arabic">
 
-                  أرسل أشياء ضخمة أو ثقيلة
-                  يصل وزنها إلى 1000 كجم
+                أرسل أشياء ضخمة أو ثقيلة
+                يصل وزنها إلى 1000 كجم
 
-                </p>
-              </div>
+              </p>
+
             </div>
 
           </div>
@@ -574,8 +610,9 @@
           <div class="row justify-content-center">
             <div class="col-xl-3 col-md-3 d-flex align-items-stretch"
               data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue2-rate.png" alt="Logo 6">
+              <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+                <img class="image-box-3d"
+                  src="assets/img/resources/blue2-rate.png" alt="Logo 6">
                 <p class="english">Exclusive rates</p>
                 <p class="arabic">أسعار حصرية</p>
               </div>
@@ -583,8 +620,9 @@
 
             <div class="col-xl-3 col-md-3 d-flex align-items-stretch mt-4
               mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue2-delivery.png" alt="Logo
+              <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+                <img class="image-box-3d"
+                  src="assets/img/resources/blue2-delivery.png" alt="Logo
                   6">
                 <p class="english">Better delivery</p>
                 <p class="arabic">توصيل أفضل</p>
@@ -593,8 +631,9 @@
 
             <div class="col-xl-3 col-md-3 d-flex align-items-stretch mt-4
               mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-              <div class="icon-box justify-content-center">
-                <img src="assets/img/resources/blue2-tracking.png" alt="Logo
+              <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
+                <img class="image-box-3d"
+                  src="assets/img/resources/blue2-tracking.png" alt="Logo
                   6">
                 <p class="english">Instant tracking</p>
                 <p class="arabic">التتبع الفوري</p>
