--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     alt="Image
                     2" class="img-fluid">
                   <p class="english">On-Demand</p>
-                  <h5 class="english">Last-Mile Delivery</h5>
+                  <h5 class="english">Last-Mile<br> Delivery</h5>
                   <p class="arabic">على الطلب</p>
                   <h5 class="arabic">توصيل الميل الأخير</h5>
                 </div>
@@ -258,7 +258,7 @@
                   <img src="assets/img/resources/ecommerce.png" alt="Image 3"
                     class="img-fluid">
                   <p class="english">On-Demand</p>
-                  <h5 class="english">E-Commerce Delivery</h5>
+                  <h5 class="english">Hyperlocal <br>Delivery</h5>
                   <p class="arabic">على الطلب</p>
                   <h5 class="arabic">توصيل التجارة الإلكترونية</h5>
                 </div>
@@ -269,7 +269,7 @@
                   <img src="assets/img/resources/solution-warehouse.png"
                     alt="Image 4" class="img-fluid">
                   <p class="english">On-Demand</p>
-                  <h5 class="english">Warehousing Services</h5>
+                  <h5 class="english">Warehousing <br>Services</h5>
                   <p class="arabic">على الطلب</p>
                   <h5 class="arabic">خدمات التخزين</h5>
                 </div>
@@ -796,7 +796,7 @@
               margin-bottom: 8%;
           "></image>
               <p>
-                <span class="english">Ecosystem of Logistics partners on eCommerce, simple, <br>transparent, low-cost, <br>technology-driven delivery network</span>
+                <span class="english">Ecosystem of Logistics partners on E-Commerce, simple, <br>transparent, low-cost, <br>technology-driven delivery network</span>
                 <span class="arabic">شركاء النظام الإيكولوجي للخدمات اللوجستية في التجارة الإلكترونية<br> ، شبكة توصيل بسيطة وشفافة ومنخفضة التكلفة قائمة على التكنولوجيا</span>
                 
              
@@ -910,4 +910,4 @@
     }
   }
 </script>
-</html>
+</html>eCommerce, simple
