--- a/index.html
+++ b/index.html
@@ -123,15 +123,20 @@
         style="margin-top: 0px;padding-top: 0px;padding-bottom: 0px;">
         <!-- <div class="container-fluid" data-aos="fade-up"> -->
         <div class="row" style=" background-image:
-          url('assets/img/resources/problemslider-image1.jpg')">
+          url('assets/img/resources/problemslider-image1.jpg');          
+        height: 500px;">
           <div class="col-md-6 p-0">
             <img src="assets/img/resources/problemslider-image1.jpg"
               alt="Background Image"
-              style="width:100%; height:100%;">
+              style="width:100%; height:85%;">
           </div>
           <div class="col-md-5 d-flex align-items-center bg-orange text-white"
-            style="background: #f26822;">
-            <div class="container">
+            style="background: #f26822;height: 500px;">
+            <div class="container" style="
+            padding-right: 27px;
+            padding-left: 54px;
+            padding-top: 0px;
+        ">
               <div class="content">
                 <h2 class="english" style="font-size: 3rem;">You are being
                   charged a lot by
@@ -164,7 +169,7 @@
           <div class="col-md-1 p-0">
             <img src="assets/img/resources/problemslider-image2.png"
               alt="Background Image"
-              style="width:100%; height:100%;">
+              style="width:100%; height:85%;">
           </div>
         </div>
       </section><!-- End About Us Section -->
@@ -503,7 +508,7 @@
             <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
               <img class="image-box-3d"
                 src="assets/img/resources/blue1-track.png" alt="Logo 6">
-              <p class="english">Tack your parcel from
+              <p class="english">Tack your parcel from <br>
                 door-to-door</p>
               <p class="arabic">
 
