update protection text.

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                   src="assets/img/resources/blue1-protection.png" alt="Logo
                   6">
                 <p class="english">Upto 250 SAR protection as
-                  standard*
+                  standard*<br>
                   *excluding EVRi deliveries</p>
                 <p class="arabic">حماية تصل إلى 250 ريال سعودي
                   معيار*
