--- a/index.html
+++ b/index.html
@@ -908,7 +908,9 @@
                 </p>
               </div>
 
-              <div class="col-lg-3 col-md-6 footer-links">
+              <div class="col-lg-3 col-md-6 footer-links" style="
+              margin-top: 106px;
+          ">
                 <h4>Useful Links</h4>
                 <ul>
                   <li><i class="bx bx-chevron-right"></i> <a href="#">
