--- a/index.html
+++ b/index.html
@@ -909,8 +909,8 @@
               </div>
 
               <div class="col-lg-3 col-md-6 footer-links" style="
-              margin-top: 106px;
-          ">
+                margin-top: 106px;
+                ">
                 <h4>Useful Links</h4>
                 <ul>
                   <li><i class="bx bx-chevron-right"></i> <a href="#">
@@ -1003,4 +1003,4 @@
     }
   }
 </script>
-  </html>eCommerce, simple
+  </html>
