update the Demand image margin-bottom.

--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@
                 <div class="text-center">
                   <img src="assets/img/resources/solution-individual.png"
                     alt="Image
-                    1" class="img-fluid">
+                    1" class="img-fluid" style="
+    margin-bottom: 20px;
+">
                   <h5 class="english">For Individual</h5>
                   <h5 class="arabic">للأفراد</h5>
                 </div>
@@ -319,7 +321,10 @@
                   <div class="text-center">
                     <img src="assets/img/resources/solution-lastmile.png"
                       alt="Image
-                      2" class="img-fluid">
+                      2" class="img-fluid" style="
+    margin-bottom: 20px;
+">
+                      <br>
                     <p class="english">On-Demand</p>
                     <h5 class="english">Last-Mile<br> Delivery</h5>
                     <p class="arabic">على الطلب</p>
@@ -330,7 +335,10 @@
                 <div class="col-md-4 mb-4">
                   <div class="text-center">
                     <img src="assets/img/resources/ecommerce.png" alt="Image 3"
-                      class="img-fluid">
+                      class="img-fluid" style="
+    margin-bottom: 20px;
+">
+                      <br>
                     <p class="english">On-Demand</p>
                     <h5 class="english">Hyperlocal <br>Delivery</h5>
                     <p class="arabic">على الطلب</p>
@@ -341,7 +349,10 @@
                 <div class="col-md-4 mb-4">
                   <div class="text-center">
                     <img src="assets/img/resources/solution-warehouse.png"
-                      alt="Image 4" class="img-fluid">
+                      alt="Image 4" class="img-fluid" style="
+    margin-bottom: 20px;
+">
+                      <br>
                     <p class="english">On-Demand</p>
                     <h5 class="english">Warehousing <br>Services</h5>
                     <p class="arabic">على الطلب</p>
