--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
                 <button type="button" class="btn btn-primary" style="
                   background: #f16721;
                   color: white;
+                  width: 22%;
                   ">
                   <span class="english">Now!</span>
                   <span class="arabic">الان!</span>
