--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                   margin-top: 20px;
                   ">
                   <img src="assets/img/resources/partners-jnt.jpg" alt="Logo 3"
-                    style="height: 40px;">
+                    style="height: 34px;">
                 </div>
                 <div class="col-md-2 mb-4 " style="
                   padding-left: 15px;
@@ -469,7 +469,7 @@
                   ">
                   <img src="assets/img/resources/partners-aramex.jpg" alt="Logo
                     4"
-                    style="height: 40px;">
+                    style="height: 34px;">
                 </div>
                 <div class="col-md-2 mb-4 " style="
                   padding-left: 15px;
@@ -489,7 +489,9 @@
 
             <!-- Section 3 -->
             <div class="row justify-content-center">
-              <div class="col-md-8">
+              <div class="col-md-8" style="
+              margin-bottom: 20px;
+              ">
                 <h2 class="text-orange english">Sales Channels</h2>
                 <h2 class="text-orange arabic">قنوات البيع</h2>
               </div>
