--- a/index.html
+++ b/index.html
@@ -630,7 +630,9 @@
 
         <!-- ======= Services Section 2 ======= -->
         <section id="skills" class="skills">
-          <div class="container text-center">
+          <div class="container text-center"style="
+          line-height: 38px;
+      ">
             <!-- Section 1 -->
             <div class="row justify-content-center mb-5">
               <div class="col-md-8">
