--- a/index.html
+++ b/index.html
@@ -572,10 +572,10 @@
                 <img class="image-box-3d"
                   src="assets/img/resources/blue1-protection.png" alt="Logo
                   6">
-                <p class="english">Upto 250 SAR protection as
+                <p class="english text-box-3d">Upto 250 SAR protection as
                   standard*<br>
                   *excluding EVRi deliveries</p>
-                <p class="arabic">حماية تصل إلى 250 ريال سعودي
+                <p class="arabic text-box-3d">حماية تصل إلى 250 ريال سعودي
                   معيار*
                   * باستثناء عمليات تسليم EVRi </p>
 
@@ -585,9 +585,9 @@
                 <img class="image-box-3d"
                   src="assets/img/resources/blue1-collection.png" alt="Logo
                   6">
-                <p class="english">Collection or drop-off at a local shop
+                <p class="english text-box-3d">Collection or drop-off at a local shop
                   anytime</p>
-                <p class="arabic">
+                <p class="arabic text-box-3d">
 
                   الاستلام أو الإنزال في المتاجر المحلية في أي وقت
 
@@ -598,9 +598,9 @@
               <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
                 <img class="image-box-3d"
                   src="assets/img/resources/blue1-track.png" alt="Logo 6">
-                <p class="english">Tack your parcel from <br>
+                <p class="english text-box-3d">Tack your parcel from <br>
                   door-to-door</p>
-                <p class="arabic">
+                <p class="arabic text-box-3d">
 
                   تتبع الطرد الخاص بك من
                   من الباب إلى الباب
@@ -612,9 +612,9 @@
               <div class="col-xl-3 col-md-6 icon-box-3d justify-content-center">
                 <img class="image-box-3d"
                   src="assets/img/resources/blue1-bulky.png" alt="Logo 6">
-                <p class="english">Send bulky or heavy items
+                <p class="english text-box-3d">Send bulky or heavy items
                   weighing up to 1,000 kg</p>
-                <p class="arabic">
+                <p class="arabic text-box-3d">
 
                   أرسل أشياء ضخمة أو ثقيلة
                   يصل وزنها إلى 1000 كجم
@@ -715,8 +715,8 @@
                   justify-content-center">
                   <img class="image-box-3d"
                     src="assets/img/resources/blue2-rate.png" alt="Logo 6">
-                  <p class="english">Exclusive rates</p>
-                  <p class="arabic">أسعار حصرية</p>
+                  <p class="english text-box-3d">Exclusive rates</p>
+                  <p class="arabic text-box-3d">أسعار حصرية</p>
                 </div>
               </div>
 
@@ -727,8 +727,8 @@
                   <img class="image-box-3d"
                     src="assets/img/resources/blue2-delivery.png" alt="Logo
                     6">
-                  <p class="english">Better delivery</p>
-                  <p class="arabic">توصيل أفضل</p>
+                  <p class="english text-box-3d">Better delivery</p>
+                  <p class="arabic text-box-3d">توصيل أفضل</p>
                 </div>
               </div>
 
@@ -739,8 +739,8 @@
                   <img class="image-box-3d"
                     src="assets/img/resources/blue2-tracking.png" alt="Logo
                     6">
-                  <p class="english">Instant tracking</p>
-                  <p class="arabic">التتبع الفوري</p>
+                  <p class="english text-box-3d">Instant tracking</p>
+                  <p class="arabic text-box-3d">التتبع الفوري</p>
                 </div>
               </div>
             </div>
@@ -752,7 +752,7 @@
         <section id="contact" class="contact">
           <div class="container" data-aos="fade-up">
 
-            <div class="section-title">
+            <div class="section-title section-title-contact ">
               <h3 class="text-orange english">Get in touch!</h3>
               <p class="english">Jet Parcel is the leading delivery management
                 solution for
@@ -900,24 +900,24 @@
                   "></image>
                 <p>
                   <span class="english">Ecosystem of Logistics partners on
-                    E-Commerce, simple, <br>transparent, low-cost, <br>technology-driven
-                    delivery network</span>
+                    E-Commerce, simple, transparent, low-cost, technology-driven
+                    delivery network.</span>
                   <span class="arabic">شركاء النظام الإيكولوجي للخدمات اللوجستية
                     في التجارة الإلكترونية<br> ، شبكة توصيل بسيطة وشفافة ومنخفضة
                     التكلفة قائمة على التكنولوجيا</span>
-
+                    <br>
 
                   <a target="_blank" href="https://wa.me/966510995151">
 
                     <strong>
-                      <span class="english">Phone:</span>
+                      <span class="english">Phone :</span>
                       <span class="arabic">الهاتف:</span>
                     </strong>+966510995151<br>
                   </a>
                   <a target="_blank" href="mailto:info@jet-parcel.com">
 
                     <strong>
-                      <span class="english">Email:</span>
+                      <span class="english">Email :</span>
                       <span class="arabic">البريد الإلكترونية:</span>
                     </strong> info@jet-parcel.com<br>
                   </a>
