--- a/index.html
+++ b/index.html
@@ -778,67 +778,21 @@
 
               <div class="col-lg-5 d-flex align-items-stretch">
                 <div class="info">
-                  <!-- <h3 class="text-orange"> Contact info</h3> -->
-                  <div class="email">
-                    <a target="_blank" href="mailto:info@jet-parcel.com">
-                      <i class="bi bi-envelope"></i>
-                      <h4>
-                        <span class="english">Email:</span>
-                        <span class="arabic">البريد الالكتروني</span>
-                      </h4>
-                      <p>info@jet-parcel.com</p></a>
-                  </div>
-
-                  <div class="whatsapp">
-                    <a target="_blank" href="https://wa.me/966510995151">
-                      <i class="bi bi-whatsapp"></i>
-                      <h4>
-                        <span class="english">Whatsapp:</span>
-                        <span class="arabic"> واتس اب</span>
-                      </h4>
-                      <p>+966510995151</p></a>
-                  </div>
-
-                  <div class="media">
-                    <a target="_blank"
-                      href="https://www.linkedin.com/company/jetparcel/">
-                      <i class="bi bi-linkedin" style="margin-right: 10px;"></i>
-                      <h4>
-                        <span class="english">Linkedin:</span>
-                        <span class="arabic">لينكدان</span>
-                      </h4>
-                      <p>/Jetparcel</p></a>
-                  </div>
-
-                  <div class="media">
-                    <a target="_blank" href="https://twitter.com/jetparcel">
-                      <i class="bi bi-twitter" style="margin-right: 10px;"></i>
-                      <h4>
-                        <span class="english">Twitter:</span>
-                        <span class="arabic">توتير</span>
-                      </h4>
-                      <p>/Jetparcel</p></a>
-                  </div>
-
-                  <div class="media">
-                    <a target="_blank"
-                      href="https://www.instagram.com/jetparcel/">
-                      <i class="bi bi-instagram" style="margin-right: 10px;"></i>
-                      <h4>
-                        <span class="english">Instagram:</span>
-                        <span class="arabic">انستجرام</span>
-                      </h4>
-                      <p>/Jetparcel</p></a>
-                  </div>
-
-                  <!-- <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                  frameborder="0" style="border:0; width: 100%; height: 290px;"
-                  allowfullscreen></iframe> -->
+                  <a target="_blank" href="mailto:info@jet-parcel.com" class="button-2">
+                    <img src="assets/img/resources/contact.jpg" alt="" />
+                    info@jet-parcel.com
+                  </a>
+                  <a target="_blank" href="https://wa.me/966510995151" class="button-2">
+                    <img src="assets/img/resources/contact-whatsapp.png" alt="" />
+                    +966510995151
+                  </a>
+                  <a target="_blank" href="https://www.linkedin.com/company/jetparcel/" class="button-2">
+                    <img src="assets/img/resources/contact-socialmedai.png" alt="" />
+                    /Jetparcel
+                  </a>
                 </div>
-
-
               </div>
+              
 
               <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
                 <form action="forms/contact.php" method="post" role="form"
