update the contact button style.

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                   <img src="assets/img/resources/solution-individual.png"
                     alt="Image
                     1" class="img-fluid" style="
-    margin-bottom: 20px;
-">
+                    margin-bottom: 20px;
+                    ">
                   <h5 class="english">For Individual</h5>
                   <h5 class="arabic">للأفراد</h5>
                 </div>
@@ -322,9 +322,9 @@
                     <img src="assets/img/resources/solution-lastmile.png"
                       alt="Image
                       2" class="img-fluid" style="
-    margin-bottom: 20px;
-">
-                      <br>
+                      margin-bottom: 20px;
+                      ">
+                    <br>
                     <p class="english">On-Demand</p>
                     <h5 class="english">Last-Mile<br> Delivery</h5>
                     <p class="arabic">على الطلب</p>
@@ -336,9 +336,9 @@
                   <div class="text-center">
                     <img src="assets/img/resources/ecommerce.png" alt="Image 3"
                       class="img-fluid" style="
-    margin-bottom: 20px;
-">
-                      <br>
+                      margin-bottom: 20px;
+                      ">
+                    <br>
                     <p class="english">On-Demand</p>
                     <h5 class="english">Hyperlocal <br>Delivery</h5>
                     <p class="arabic">على الطلب</p>
@@ -350,9 +350,9 @@
                   <div class="text-center">
                     <img src="assets/img/resources/solution-warehouse.png"
                       alt="Image 4" class="img-fluid" style="
-    margin-bottom: 20px;
-">
-                      <br>
+                      margin-bottom: 20px;
+                      ">
+                    <br>
                     <p class="english">On-Demand</p>
                     <h5 class="english">Warehousing <br>Services</h5>
                     <p class="arabic">على الطلب</p>
@@ -490,8 +490,8 @@
             <!-- Section 3 -->
             <div class="row justify-content-center">
               <div class="col-md-8" style="
-              margin-bottom: 20px;
-              ">
+                margin-bottom: 20px;
+                ">
                 <h2 class="text-orange english">Sales Channels</h2>
                 <h2 class="text-orange arabic">قنوات البيع</h2>
               </div>
@@ -585,7 +585,8 @@
                 <img class="image-box-3d"
                   src="assets/img/resources/blue1-collection.png" alt="Logo
                   6">
-                <p class="english text-box-3d">Collection or drop-off at a local shop
+                <p class="english text-box-3d">Collection or drop-off at a local
+                  shop
                   anytime</p>
                 <p class="arabic text-box-3d">
 
@@ -630,9 +631,9 @@
 
         <!-- ======= Services Section 2 ======= -->
         <section id="skills" class="skills">
-          <div class="container text-center"style="
-          line-height: 38px;
-      ">
+          <div class="container text-center" style="
+            line-height: 38px;
+            ">
             <!-- Section 1 -->
             <div class="row justify-content-center mb-5">
               <div class="col-md-8">
@@ -778,138 +779,165 @@
 
               <div class="col-lg-5 d-flex align-items-stretch">
                 <div class="info">
-                  <a target="_blank" href="mailto:info@jet-parcel.com" class="button-2">
+                  <a target="_blank" href="mailto:info@jet-parcel.com"
+                    class="contact-button">
                     <img src="assets/img/resources/contact.jpg" alt="" />
                     info@jet-parcel.com
                   </a>
-                  <a target="_blank" href="https://wa.me/966510995151" class="button-2">
-                    <img src="assets/img/resources/contact-whatsapp.png" alt="" />
+                  <br>
+                  <a target="_blank" href="https://wa.me/966510995151"
+                    class="contact-button">
+                    <img src="assets/img/resources/contact-whatsapp.png" alt=""
+                      />
                     +966510995151
                   </a>
-                  <a target="_blank" href="https://www.linkedin.com/company/jetparcel/" class="button-2">
-                    <img src="assets/img/resources/contact-socialmedai.png" alt="" />
+                  <br>
+                  <div class="contact-button">
+
+                    <a target="_blank"
+                      href="https://www.linkedin.com/company/jetparcel/"
+                      class="contact-socialmeda">
+
+                      <img src="assets/img/resources/contact-socialmedai-1.png"
+                        alt="" />
+                    </a>
+                    <a target="_blank"
+                      href="https://twitter.com/jetparcel"
+                      class="contact-socialmeda">
+
+                      <img src="assets/img/resources/contact-socialmedai-2.png"
+                        alt="" />
+                    </a>
+                    <a target="_blank"
+                      href="https://www.instagram.com/jetparcel/"
+                      class="contact-socialmeda">
+
+                      <img src="assets/img/resources/contact-socialmedai-3.png"
+                        alt="" />
+                    </a>
                     /Jetparcel
                   </a>
                 </div>
               </div>
-              
+            </div>
 
-              <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                <form action="forms/contact.php" method="post" role="form"
-                  class="php-email-form" style="background: #0e76bc;">
-                  <div class="row">
-                    <div class="form-group col-md-6">
 
-                      <input type="text" name="name" class="form-control"
-                        id="name" required placeholder="Enter your name">
-                    </div>
-                    <div class="form-group col-md-6">
+            <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+              <form action="forms/contact.php" method="post" role="form"
+                class="php-email-form" style="background: #0e76bc;">
+                <div class="row">
+                  <div class="form-group col-md-6">
 
-                      <input type="email" class="form-control" name="email"
-                        id="email" required placeholder="Enter your Email">
-                    </div>
+                    <input type="text" name="name" class="form-control"
+                      id="name" required placeholder="Enter your name">
                   </div>
-                  <div class="form-group">
+                  <div class="form-group col-md-6">
 
-                    <input type="text" class="form-control" name="subject"
-                      id="subject" required placeholder="Enter Subject">
+                    <input type="email" class="form-control" name="email"
+                      id="email" required placeholder="Enter your Email">
                   </div>
-                  <div class="form-group">
+                </div>
+                <div class="form-group">
 
-                    <textarea class="form-control" name="message" rows="10"
-                      required placeholder="Enter Message"></textarea>
-                  </div>
-                  <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank
-                      you!</div>
-                  </div>
-                  <div class="text-center"><button type="submit">
+                  <input type="text" class="form-control" name="subject"
+                    id="subject" required placeholder="Enter Subject">
+                </div>
+                <div class="form-group">
 
-                      <span class="english">Send Message</span>
-                      <span class="arabic">ارسال الرسالة</span>
-                    </button></div>
-                </form>
-              </div>
+                  <textarea class="form-control" name="message" rows="10"
+                    required placeholder="Enter Message"></textarea>
+                </div>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank
+                    you!</div>
+                </div>
+                <div class="text-center"><button type="submit">
 
+                    <span class="english">Send Message</span>
+                    <span class="arabic">ارسال الرسالة</span>
+                  </button></div>
+              </form>
             </div>
 
           </div>
-        </section><!-- End Contact Section -->
 
-      </main><!-- End #main -->
+        </div>
+      </section><!-- End Contact Section -->
 
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
-        <div class="footer-top">
-          <div class="container" style="height: 300px;">
-            <div class="row">
+    </main><!-- End #main -->
 
-              <div class="col-lg-3 col-md-6 footer-contact">
-                <!-- <h3>Arsha</h3> -->
-                <image src="assets/img/resources/logo.png" rel="icon" style="
-                  height: 25%;
-                  margin-bottom: 8%;
-                  "></image>
-                <p>
-                  <span class="english">Ecosystem of Logistics partners on
-                    E-Commerce, simple, transparent, low-cost, technology-driven
-                    delivery network.</span>
-                  <span class="arabic">شركاء النظام الإيكولوجي للخدمات اللوجستية
-                    في التجارة الإلكترونية<br> ، شبكة توصيل بسيطة وشفافة ومنخفضة
-                    التكلفة قائمة على التكنولوجيا</span>
-                    <br>
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container" style="height: 300px;">
+          <div class="row">
 
-                  <a target="_blank" href="https://wa.me/966510995151">
+            <div class="col-lg-3 col-md-6 footer-contact">
+              <!-- <h3>Arsha</h3> -->
+              <image src="assets/img/resources/logo.png" rel="icon" style="
+                height: 25%;
+                margin-bottom: 8%;
+                "></image>
+              <p>
+                <span class="english">Ecosystem of Logistics partners on
+                  E-Commerce, simple, transparent, low-cost, technology-driven
+                  delivery network.</span>
+                <span class="arabic">شركاء النظام الإيكولوجي للخدمات اللوجستية
+                  في التجارة الإلكترونية<br> ، شبكة توصيل بسيطة وشفافة ومنخفضة
+                  التكلفة قائمة على التكنولوجيا</span>
+                <br>
 
-                    <strong>
-                      <span class="english">Phone :</span>
-                      <span class="arabic">الهاتف:</span>
-                    </strong>+966510995151<br>
-                  </a>
-                  <a target="_blank" href="mailto:info@jet-parcel.com">
+                <a target="_blank" href="https://wa.me/966510995151">
 
-                    <strong>
-                      <span class="english">Email :</span>
-                      <span class="arabic">البريد الإلكترونية:</span>
-                    </strong> info@jet-parcel.com<br>
-                  </a>
-                </p>
-              </div>
+                  <strong>
+                    <span class="english">Phone :</span>
+                    <span class="arabic">الهاتف:</span>
+                  </strong>+966510995151<br>
+                </a>
+                <a target="_blank" href="mailto:info@jet-parcel.com">
 
-              <div class="col-lg-3 col-md-6 footer-links" style="
-                margin-top: 106px;
-                ">
-                <h4>Useful Links</h4>
-                <ul>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">
+                  <strong>
+                    <span class="english">Email :</span>
+                    <span class="arabic">البريد الإلكترونية:</span>
+                  </strong> info@jet-parcel.com<br>
+                </a>
+              </p>
+            </div>
 
-                      <span class="english">Home</span>
-                      <span class="arabic">الرئسية</span>
-                    </a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#about">
-                      <span class="english">What we do</span>
-                      <span class="arabic">ماذا نفعل</span>
-                    </a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#demand">
-                      <span class="english">Services</span>
-                      <span class="arabic">خدمتنا</span>
-                    </a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#partners">
-                      <span class="english">Our partners</span>
-                      <span class="arabic">شركاؤنا</span>
-                    </a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#skills">
-                      <span class="english">Seamless integration</span>
-                      <span class="arabic">سهولة التكامل</span>
-                    </a></li>
-                </ul>
+            <div class="col-lg-3 col-md-6 footer-links" style="
+              margin-top: 106px;
+              ">
+              <h4>Useful Links</h4>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="#">
 
-              </div>
+                    <span class="english">Home</span>
+                    <span class="arabic">الرئسية</span>
+                  </a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#about">
+                    <span class="english">What we do</span>
+                    <span class="arabic">ماذا نفعل</span>
+                  </a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#demand">
+                    <span class="english">Services</span>
+                    <span class="arabic">خدمتنا</span>
+                  </a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#partners">
+                    <span class="english">Our partners</span>
+                    <span class="arabic">شركاؤنا</span>
+                  </a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#skills">
+                    <span class="english">Seamless integration</span>
+                    <span class="arabic">سهولة التكامل</span>
+                  </a></li>
+              </ul>
 
-              <div class="col-lg-3 col-md-6 footer-links">
-                <!-- <h4>Our Services</h4>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-links">
+              <!-- <h4>Our Services</h4>
               <ul>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
@@ -917,46 +945,46 @@
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
               </ul> -->
-              </div>
-
-
-
             </div>
+
+
+
           </div>
         </div>
-        <div class="container footer-bottom clearfix">
-          <div class="copyright">
-            &copy; Copyright <strong><span>Meccano</span></strong>. All Rights
-            Reserved
-          </div>
-          <div class="credits">
-            Designed by <a href="https://meccanos.com/">Meccano</a>
-          </div>
+      </div>
+      <div class="container footer-bottom clearfix">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Meccano</span></strong>. All Rights
+          Reserved
         </div>
-      </footer><!-- End Footer -->
+        <div class="credits">
+          Designed by <a href="https://meccanos.com/">Meccano</a>
+        </div>
+      </div>
+    </footer><!-- End Footer -->
 
-      <div id="preloader"></div>
-      <a href="#" class="back-to-top d-flex align-items-center
-        justify-content-center"><i
-          class="bi bi-arrow-up-short"></i></a>
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top d-flex align-items-center
+      justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
 
-      <!-- Vendor JS Files -->
-      <script src="assets/vendor/aos/aos.js"></script>
-      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-      <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-      <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-      <script src="assets/vendor/php-email-form/validate.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-      <!-- Template Main JS File -->
-      <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-      <!-- =======================================================
+    <!-- =======================================================
   * Developed by: Karim Hemida
   ======================================================== -->
-    </body>
-    <script>
+  </body>
+  <script>
   function toggleLanguage() {
     var body = document.getElementsByTagName("body")[0];
     body.classList.toggle("is-arabic");
@@ -973,4 +1001,4 @@
     }
   }
 </script>
-  </html>
+</html>
