update the protection section text .

--- a/index.html
+++ b/index.html
@@ -573,11 +573,9 @@
                   src="assets/img/resources/blue1-protection.png" alt="Logo
                   6">
                 <p class="english text-box-3d">Upto 250 SAR protection as
-                  standard*<br>
-                  *excluding EVRi deliveries</p>
+                  standard</p>
                 <p class="arabic text-box-3d">حماية تصل إلى 250 ريال سعودي
-                  معيار*
-                  * باستثناء عمليات تسليم EVRi </p>
+                  معيار </p>
 
               </div>
 
